@@ -43,7 +43,8 @@
           (http://www.packetfence.org/mantis/view.php?id=405)
         getMacAddr (Cisco.pm) does not work with port-security
           (http://www.packetfence.org/mantis/view.php?id=407)
-
+        create traplog database table
+          (http://www.packetfence.org/mantis/view.php?id=425)
 
 1.7.4
         undef operator in SNMP.pm
